--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Open+Sans" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
 
     <!--Material Icon -->
-    <link rel="stylesheet" type="text/css" href="css/materialdesignicons.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/materialdesignicons.min.css" />
 
     <!--mobrise Icon -->
-    <link rel="stylesheet" type="text/css" href="css/mobrise.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/mobrise.css" />
 
     <!-- magnific-popup css  -->
-    <link rel="stylesheet" type="text/css" href="css/magnific-popup.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css" />
 
     <!-- Custom  Css -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/colors/default.css" id="color-opt" />
 
 </head>
 
@@ -132,7 +132,7 @@
                         <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                             <div class="text-center">
                                 <div class="about-img mt-5 mb-5">
-                                    <img src="images/emon-khan.jpg" alt=""
+                                    <img src="assets/images/emon-khan.jpg" alt=""
                                         class="img-fluid mx-auto d-block rounded-circle">
                                 </div>
                                 <h3 class="mb-3">Emon Khan <small class="text-muted"> - Full Stack Web Developer</small>
@@ -737,25 +737,25 @@
     <!-- footer end -->
 
     <!-- javascript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrollspy.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/scrollspy.min.js"></script>
     <!-- Magnific Popup -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <!-- filter -->
-    <script src="js/isotope.js"></script>
-    <script src="js/masonry.pkgd.min.js"></script>
-    <script src="js/portfolio.init.js"></script>
+    <script src="assets/js/isotope.js"></script>
+    <script src="assets/js/masonry.pkgd.min.js"></script>
+    <script src="assets/js/portfolio.init.js"></script>
     <!-- Contact js -->
-    <script src="js/contact.js"></script>
+    <script src="assets/js/contact.js"></script>
     <!-- Counter js -->
-    <script src="js/counter.js"></script>
+    <script src="assets/js/counter.js"></script>
     <!--Partical js-->
-    <script src="js/particles.js"></script>
-    <script src="js/particles.app.js"></script>
+    <script src="assets/js/particles.js"></script>
+    <script src="assets/js/particles.app.js"></script>
     <!-- custom -->
-    <script src="js/app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
