--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     development of innovative static and dynamic websites.
                                 </p>
                                 <div class="mt-4 pt-2">
-                                    <a href="#" class="btn btn-outline btn-round">Download CV <i
+                                    <a href="assets/resume/emon-khan-resume.pdf" class="btn btn-outline btn-round">Download CV <i
                                             class="mdi mdi-download ml-2"></i></a>
                                 </div>
                             </div>
@@ -107,8 +107,7 @@
                     <div class="section-title text-center mb-4 pb-2">
 
                         <h3>About me</h3>
-                        <p class="text-muted mx-auto mb-0 para-desc">Lorem Ipsum is simply dummy text of the printing
-                            and typesetting industry Ipsum has been the industry</p>
+                        <p class="text-muted mx-auto mb-0 para-desc">Here is some of my professional working experience details</p>
                     </div>
                 </div>
             </div>
@@ -173,25 +172,25 @@
                                 <div class="col-lg-6">
                                     <div class="skill mt-5">
                                         <div>
-                                            <p class="text-muted text-uppercase mb-2">HTML</p>
+                                            <p class="text-muted text-uppercase mb-2">Laravel</p>
                                             <div class="progress">
-                                                <div class="progress-bar" style="width:94%;">
-                                                    <div class="progress-value text-muted">94%</div>
+                                                <div class="progress-bar" style="width:80%;">
+                                                    <div class="progress-value text-muted">80%</div>
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="mt-5">
-                                            <p class="text-muted text-uppercase mb-2">CSS</p>
+                                            <p class="text-muted text-uppercase mb-2">Vue</p>
                                             <div class="progress">
-                                                <div class="progress-bar" style="width:90%;">
-                                                    <div class="progress-value text-muted">90%</div>
+                                                <div class="progress-bar" style="width:40%;">
+                                                    <div class="progress-value text-muted">40%</div>
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="mt-5">
-                                            <p class="text-muted text-uppercase mb-2">JAVASCRIPT</p>
+                                            <p class="text-muted text-uppercase mb-2">Bootstrap</p>
                                             <div class="progress">
                                                 <div class="progress-bar" style="width:86%;">
                                                     <div class="progress-value text-muted">86%</div>
@@ -211,7 +210,7 @@
                                             </div>
                                         </div>
                                         <div class="mt-5">
-                                            <p class="text-muted text-uppercase mb-2">BOOTSTRAP</p>
+                                            <p class="text-muted text-uppercase mb-2">JavaScript</p>
                                             <div class="progress">
                                                 <div class="progress-bar" style="width:80%;">
                                                     <div class="progress-value text-muted">80%</div>
@@ -219,10 +218,10 @@
                                             </div>
                                         </div>
                                         <div class="mt-5">
-                                            <p class="text-muted text-uppercase mb-2">LARAVEL</p>
+                                            <p class="text-muted text-uppercase mb-2">HTML/CSS</p>
                                             <div class="progress">
-                                                <div class="progress-bar" style="width:76%;">
-                                                    <div class="progress-value text-muted">76%</div>
+                                                <div class="progress-bar" style="width:93%;">
+                                                    <div class="progress-value text-muted">93%</div>
                                                 </div>
                                             </div>
                                         </div>
