--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <h1 class="display-3 text-white title">Md. Emon Khan</h1>
                                 <p class="text-light mx-auto para-desc">
                                     Working as a full stack developer with 5+ years of experience in the design and
-                                    development of innovative static and dynamic websites.
+                                    ecommerce of innovative static and dynamic websites.
                                 </p>
                                 <div class="mt-4 pt-2">
                                     <a href="assets/resume/emon-khan-resume.pdf" class="btn btn-outline btn-round">Download CV <i
@@ -138,7 +138,7 @@
                                 </h3>
                                 <p class="text-muted">
                                     Working as a full stack developer with 5+ years of experience in the design and
-                                    development of innovative static and dynamic websites.
+                                    ecommerce of innovative static and dynamic websites.
                                 </p>
                                 <p class="text-muted">
                                     I have a strong grip on build a responsive static and dynamic website using PHP,
@@ -151,7 +151,7 @@
                                     also have enough design idea to build an attractive webpage via visual page builder.
 
                                 <p class="text-muted">
-                                    Frontend development, PSD to HTML, debugging, PHP JavaScript script writing,
+                                    Frontend ecommerce, PSD to HTML, debugging, PHP JavaScript script writing,
                                     problem-solving skills.
                                 </p>
 
@@ -245,12 +245,12 @@
                                                 <hr class="mt-4 mb-4">
                                             </div>
                                             <div>
-                                                <h6>Frontend Development</h6>
+                                                <h6>Frontend ecommerce</h6>
                                                 <p class="text-muted">Freelance Marketplace, Started - 2019</p>
                                                 <hr class="mt-4 mb-4">
                                             </div>
                                             <div>
-                                                <h6>Web Application Development</h6>
+                                                <h6>Web Application ecommerce</h6>
                                                 <p class="text-muted">Freelance Marketplace, Started - 2020</p>
                                                 <hr class="mt-4 mb-4">
                                             </div>
@@ -347,7 +347,7 @@
                 <div class="col-lg-4">
                     <div class="service-card mt-4 text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Web Development</h5>
+                            <h5 class="mb-3">Web ecommerce</h5>
                             <p class="text-muted mb-0">
                                 We understand that code is a living entity that needs to scale and adapt as your
                                 business grows and new information comes to light. We’ll help you pick the stack
@@ -363,7 +363,7 @@
                             <h5 class="mb-3">PSD to HTML</h5>
                             <p class="text-muted mb-0">
                                 We pride ourselves in only using the latest technologies coming out of the web
-                                development world – when we turn your website into HTML, we do it with care. Make
+                                ecommerce world – when we turn your website into HTML, we do it with care. Make
                                 sure the code is readable, and use extensive documentation to clarify our source
                                 code.
                             </p>
@@ -402,117 +402,63 @@
             <div class="row mt-4 pt-2">
                 <ul class="col container-filter categories-filter text-center mb-0" id="filter">
                     <li><a class="categories active" data-filter="*">All</a></li>
-                    <li><a class="categories" data-filter=".branding">Branding</a></li>
-                    <li><a class="categories" data-filter=".designing">Designing</a></li>
-                    <li><a class="categories" data-filter=".photography">Photography</a></li>
-                    <li><a class="categories" data-filter=".development">Development</a></li>
+                    <li><a class="categories" data-filter=".laravel">Laravel</a></li>
+                    <li><a class="categories" data-filter=".php">PHP</a></li>
+                    <li><a class="categories" data-filter=".html">HTML</a></li>
+                    <li><a class="categories" data-filter=".ecommerce">E-Commerce</a></li>
                 </ul>
             </div>
             <!-- portfolio menu end -->
             <!-- Gallary -->
             <div class="row container-grid projects-wrapper mt-4 pt-2">
-                <div class="col-lg-4 spacing branding designing development">
+                <div class="col-lg-4 spacing laravel php">
                     <div class="item-box mt-2">
                         <a class="mfp-image"
-                            href="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
+                            href="images/portfolio/rent-management-system_laravel.png"
                             title="">
                             <img class="item-container img-fluid mx-auto"
-                                src="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
+                                src="images/portfolio/cover/rent-management-system_laravel.png"
                                 alt="1" />
                             <div class="item-mask">
                                 <div class="item-caption text-white text-center">
-                                    <h5>Project title</h5>
-                                    <p class="text-uppercase">Branding, Design, Development</p>
+                                    <h5>Property Management System</h5>
+                                    <p class="text-uppercase">Laravel 7</p>
                                 </div>
                             </div>
                         </a>
                     </div>
                 </div>
 
-                <div class="col-lg-4 spacing photography">
+                <div class="col-lg-4 spacing wordpress php">
                     <div class="item-box mt-2">
                         <a class="mfp-image"
-                            href="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
+                            href="images/portfolio/welfarebazar-wp_ecom.png"
                             title="">
                             <img class="item-container img-fluid mx-auto"
-                                src="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
+                                src="images/portfolio/cover/welfarebazar-wp_ecom.png"
                                 alt="2" />
                             <div class="item-mask">
                                 <div class="item-caption text-white text-center">
-                                    <h5>Project title</h5>
-                                    <p class="text-uppercase">Photo</p>
+                                    <h5>E-Commerce Shop</h5>
+                                    <p class="text-uppercase">WordPress</p>
                                 </div>
                             </div>
                         </a>
                     </div>
                 </div>
 
-                <div class="col-lg-4 spacing branding development">
+                <div class="col-lg-4 spacing laravel ecommerce php">
                     <div class="item-box mt-2">
                         <a class="mfp-image"
-                            href="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
+                            href="images/portfolio/fnfshoppingbd-laravel_ecom.jpg"
                             title="">
                             <img class="item-container img-fluid mx-auto"
-                                src="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
+                                src="images/portfolio/cover/fnfshoppingbd-laravel_ecom.jpg"
                                 alt="4" />
                             <div class="item-mask">
                                 <div class="item-caption text-white text-center">
-                                    <h5>Project title</h5>
-                                    <p class="text-uppercase">Branding, Design, Development</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 spacing branding designing">
-                    <div class="item-box mt-2">
-                        <a class="mfp-image"
-                            href="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
-                            title="">
-                            <img class="item-container img-fluid mx-auto"
-                                src="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
-                                alt="4" />
-                            <div class="item-mask">
-                                <div class="item-caption text-white text-center">
-                                    <h5>Project title</h5>
-                                    <p class="text-uppercase">Branding, Design</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 spacing branding designing">
-                    <div class="item-box mt-2">
-                        <a class="mfp-image"
-                            href="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
-                            title="">
-                            <img class="item-container img-fluid mx-auto"
-                                src="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
-                                alt="5" />
-                            <div class="item-mask">
-                                <div class="item-caption text-white text-center">
-                                    <h5>Project title</h5>
-                                    <p class="text-uppercase">Branding, Design</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 spacing photography">
-                    <div class="item-box mt-2">
-                        <a class="mfp-image"
-                            href="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
-                            title="">
-                            <img class="item-container img-fluid mx-auto"
-                                src="https://via.placeholder.com/800X600//88929f/5a6270C/O%20https://placeholder.com/"
-                                alt="1" />
-                            <div class="item-mask">
-                                <div class="item-caption text-white text-center">
-                                    <h5>Project title</h5>
-                                    <p class="text-uppercase">Photo</p>
+                                    <h5>Laravel E-Commerce</h5>
+                                    <p class="text-uppercase">laravel, ecommerce</p>
                                 </div>
                             </div>
                         </a>
