--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                             <div class="text-center">
                                 <div class="about-img mt-5 mb-5">
-                                    <img src="assets/images/emon-khan.jpg" alt=""
+                                    <img src="images/emon-khan.jpg" alt=""
                                         class="img-fluid mx-auto d-block rounded-circle">
                                 </div>
                                 <h3 class="mb-3">Emon Khan <small class="text-muted"> - Full Stack Web Developer</small>
