--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                                 </h5>
                                 <h1 class="display-3 text-white title">Md. Emon Khan</h1>
                                 <p class="text-light mx-auto para-desc">
-                                    Working as a full stack developer with 5+ years of experience in the design and
-                                    ecommerce of innovative static and dynamic websites.
+                                    Working as a full stack developer since 2015 and experience in the design and
+                                    development of innovative static and dynamic website.
                                 </p>
                                 <div class="mt-4 pt-2">
                                     <a href="assets/resume/emon-khan-resume.pdf" class="btn btn-outline btn-round">Download CV <i
@@ -174,8 +174,8 @@
                                         <div>
                                             <p class="text-muted text-uppercase mb-2">Laravel</p>
                                             <div class="progress">
-                                                <div class="progress-bar" style="width:80%;">
-                                                    <div class="progress-value text-muted">80%</div>
+                                                <div class="progress-bar" style="width:43%;">
+                                                    <div class="progress-value text-muted">43%</div>
                                                 </div>
                                             </div>
                                         </div>
